--- a/TVSorterLib/TVSorterLib.csproj
+++ b/TVSorterLib/TVSorterLib.csproj
@@ -1,157 +1,54 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{70096D06-63B7-4057-A40E-C5CCBE6BACE9}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TVSorter</RootNamespace>
-    <AssemblyName>TVSorterLib</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <CodeAnalysisRuleSet>..\Stylecop.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <CodeAnalysisRuleSet>..\Stylecop.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="DotNetZip, Version=1.13.4.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
-      <HintPath>..\packages\DotNetZip.1.13.4\lib\net40\DotNetZip.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="TheTvdbDotNet, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\TheTvdbDotNet.0.2.0\lib\net461\TheTvdbDotNet.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="CompositionRoot.cs" />
-    <Compile Include="Data\IDataProvider.cs" />
-    <Compile Include="Data\TvdbV2\IStreamWriter.cs" />
-    <Compile Include="Data\TvdbV2\StreamWriter.cs" />
-    <Compile Include="Data\TvdbV2\TvdbV2.cs" />
-    <Compile Include="DateTimeExtensions.cs" />
-    <Compile Include="Files\FileManager.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="EnumerableExtensions.cs" />
-    <Compile Include="Files\FileResultManager.cs" />
-    <Compile Include="Files\IFileManager.cs" />
-    <Compile Include="Files\IFileResultManager.cs" />
-    <Compile Include="Files\IFileSearch.cs" />
-    <Compile Include="Files\IScanManager.cs" />
-    <Compile Include="LibraryModule.cs" />
-    <Compile Include="Logger.cs" />
-    <Compile Include="LogMessageEventArgs.cs" />
-    <Compile Include="Files\ScanManager.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="LogType.cs" />
-    <Compile Include="Model\MissingEpisodeSettings.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repostitory\ITvShowRepository.cs" />
-    <Compile Include="Repostitory\TvShowRepository.cs" />
-    <Compile Include="Storage\IStorageMigration.cs" />
-    <Compile Include="Storage\IStorageProvider.cs" />
-    <Compile Include="Storage\ITextReaderProvider.cs" />
-    <Compile Include="Storage\IXmlMigration.cs" />
-    <Compile Include="Storage\IXmlValidator.cs" />
-    <Compile Include="Storage\ModelExtensions.cs" />
-    <Compile Include="Storage\TextReaderProvider.cs" />
-    <Compile Include="Storage\Version2Migration.cs" />
-    <Compile Include="Storage\Version3Migration.cs" />
-    <Compile Include="Storage\Version4Migration.cs" />
-    <Compile Include="Storage\Version5Migration.cs" />
-    <Compile Include="Storage\Xml.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Storage\XElementExtensions.cs" />
-    <Compile Include="Model\Episode.cs" />
-    <Compile Include="Model\FileResult.cs" />
-    <Compile Include="Files\FileSearch.cs" />
-    <Compile Include="Model\Settings.cs" />
-    <Compile Include="Model\TvShow.cs" />
-    <Compile Include="Storage\XmlMigration.cs" />
-    <Compile Include="Storage\XmlValidator.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="TvShowEventArgs.cs" />
-    <Compile Include="Version.cs" />
-    <Compile Include="Wrappers\DirectoryInfoWrap.cs" />
-    <Compile Include="Wrappers\FileInfoWrap.cs" />
-    <Compile Include="Wrappers\IDirectoryInfo.cs" />
-    <Compile Include="Wrappers\IFileInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <AdditionalFiles Include="..\stylecop.json">
-      <Link>stylecop.json</Link>
-    </AdditionalFiles>
-    <None Include="app.config" />
-    <None Include="TVSorter-5.0.xsd">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="TVSorter-4.0.xsd">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="packages.config" />
-    <None Include="TVSorter-3.0.xsd">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="TVSorter-1.0.xsd">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="TVSorter-2.0.xsd">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<ProductVersion>8.0.30703</ProductVersion>
+		<RootNamespace>TVSorter</RootNamespace>
+		<TargetFramework>net8.0</TargetFramework>
+		<AssemblyTitle>TVSorterLib</AssemblyTitle>
+		<Product>TVSorterLib</Product>
+		<Copyright>Copyright ©  2012</Copyright>
+		<AssemblyVersion>1.5.1.0</AssemblyVersion>
+		<FileVersion>1.5.1.0</FileVersion>
+		<CodeAnalysisRuleSet>..\Stylecop.ruleset</CodeAnalysisRuleSet>
+		<OutputPath>..\bin\</OutputPath>
+		<AnalysisLevel>latest</AnalysisLevel>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+		<DebugType>full</DebugType>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+		<DebugType>pdbonly</DebugType>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="DotNetZip" Version="1.16.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+		<PackageReference Include="Ninject" Version="3.3.6" />
+		<PackageReference Include="TheTvdbDotNet" Version="0.2.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="TVSorter-5.0.xsd">
+			<SubType>Designer</SubType>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Include="TVSorter-4.0.xsd">
+			<SubType>Designer</SubType>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Include="TVSorter-3.0.xsd">
+			<SubType>Designer</SubType>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Include="TVSorter-1.0.xsd">
+			<SubType>Designer</SubType>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Include="TVSorter-2.0.xsd">
+			<SubType>Designer</SubType>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
