--- a/TVSorterLib/TVSorterLib.csproj
+++ b/TVSorterLib/TVSorterLib.csproj
@@ -26,6 +26,7 @@
 		<PackageReference Include="Ninject" Version="3.3.6" />
 		<PackageReference Include="Ninject.Extensions.Interception" Version="3.3.5" />
 		<PackageReference Include="Ninject.Extensions.Interception.DynamicProxy" Version="3.3.5" />
+		<PackageReference Include="Standard.Licensing" Version="1.1.6" />
 		<PackageReference Include="System.Drawing.Common" Version="8.0.0" />
 	</ItemGroup>
 	<ItemGroup>
@@ -51,6 +52,6 @@
 		</None>
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\..\TheTvdbDotNet\src\TheTvdbDotNet\TheTvdbDotNet.csproj" />
+	  <ProjectReference Include="..\TheTvdbDotNet\TheTvdbDotNet.csproj" />
 	</ItemGroup>
 </Project>
