--- a/TVSorterLib/TVSorterLib.csproj
+++ b/TVSorterLib/TVSorterLib.csproj
@@ -2,11 +2,11 @@
 	<PropertyGroup>
 		<ProductVersion>8.0.30703</ProductVersion>
 		<RootNamespace>TVSorter</RootNamespace>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net8.0-windows</TargetFramework>
 		<AssemblyTitle>TVSorterLib</AssemblyTitle>
 		<Product>TVSorterLib</Product>
 		<Copyright>Copyright © 2024</Copyright>
-		<Version>2.0.0-beta</Version>
+		<Version>1.6.0</Version>
 		<OutputPath>..\bin\</OutputPath>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -28,28 +28,6 @@
 		<PackageReference Include="Ninject.Extensions.Interception.DynamicProxy" Version="3.3.5" />
 		<PackageReference Include="Standard.Licensing" Version="1.1.6" />
 		<PackageReference Include="System.Drawing.Common" Version="8.0.0" />
-	</ItemGroup>
-	<ItemGroup>
-		<None Include="TVSorter-5.0.xsd">
-			<SubType>Designer</SubType>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
-		<None Include="TVSorter-4.0.xsd">
-			<SubType>Designer</SubType>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
-		<None Include="TVSorter-3.0.xsd">
-			<SubType>Designer</SubType>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
-		<None Include="TVSorter-1.0.xsd">
-			<SubType>Designer</SubType>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
-		<None Include="TVSorter-2.0.xsd">
-			<SubType>Designer</SubType>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\TheTvdbDotNet\TheTvdbDotNet.csproj" />
