--- a/TVSorter/TVSorter.csproj
+++ b/TVSorter/TVSorter.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-		<ProductVersion>8.0.30703</ProductVersion>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net8.0-windows</TargetFramework>
 		<AssemblyTitle>TVSorter</AssemblyTitle>
@@ -9,7 +8,12 @@
 		<Copyright>Copyright © 2024</Copyright>
 		<Version>1.6.0</Version>
 		<OutputPath>..\bin\</OutputPath>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 		<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
+		<ApplicationIcon>logo.ico</ApplicationIcon>
+		<UseWindowsForms>True</UseWindowsForms>
+		<GenerateDocumentationFile>False</GenerateDocumentationFile>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
 		<DebugType>full</DebugType>
@@ -17,11 +21,7 @@
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
 		<DebugType>pdbonly</DebugType>
 	</PropertyGroup>
-	<PropertyGroup>
-		<ApplicationIcon>logo.ico</ApplicationIcon>
-		<UseWindowsForms>True</UseWindowsForms>
-		<UseWPF>True</UseWPF>
-	</PropertyGroup>
+	
 	<ItemGroup>
 	  <Content Include="logo.ico" />
 	</ItemGroup>
