--- a/TVSorterLib/TVSorterLib.csproj
+++ b/TVSorterLib/TVSorterLib.csproj
@@ -8,6 +8,8 @@
 		<Copyright>Copyright © 2024</Copyright>
 		<Version>1.6.0</Version>
 		<OutputPath>..\bin\</OutputPath>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
 		<DebugType>full</DebugType>
