--- a/TheTvdbDotNet/TheTvdbDotNet.csproj
+++ b/TheTvdbDotNet/TheTvdbDotNet.csproj
@@ -13,6 +13,10 @@
 		<RepositoryUrl>https://github.com/a-jackson/TheTvdbDotNet</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>tvdb</PackageTags>
+
+		<OutputPath>..\bin\</OutputPath>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	</PropertyGroup>
 
 </Project>
