--- a/TVSorterCmd/TVSorterCmd.csproj
+++ b/TVSorterCmd/TVSorterCmd.csproj
@@ -25,7 +25,7 @@
 		<PackageReference Include="Ninject" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\..\TheTvdbDotNet\src\TheTvdbDotNet.Ninject\TheTvdbDotNet.Ninject.csproj" />
+		<ProjectReference Include="..\TheTvdbDotNet.Ninject\TheTvdbDotNet.Ninject.csproj" />
 		<ProjectReference Include="..\TVSorterLib\TVSorterLib.csproj" />
 	</ItemGroup>
 	<ItemGroup>
